[gd_scene load_steps=2 format=3 uid="uid://bysejqqiloy1u"]

[ext_resource type="Script" path="res://UI/HandUI.gd" id="1_nken1"]

[node name="HandUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nken1")

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.666667
anchor_right = 0.819917
anchor_bottom = 0.997173
offset_right = -0.544067
offset_bottom = -0.16803
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.864583
anchor_top = 0.842593
anchor_right = 0.931424
anchor_bottom = 0.933642
offset_right = 8.0
offset_bottom = 8.0
text = "NEXT"
metadata/_edit_use_anchors_ = true

[node name="Cast" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.864583
anchor_top = 0.716049
anchor_right = 0.931424
anchor_bottom = 0.807099
offset_right = 8.0
offset_bottom = 8.0
text = "CAST"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Cast" to="." method="_on_cast_pressed"]
